--- a/package.json
+++ b/package.json
@@ -15,10 +15,13 @@
     "prop-types": "^15.7.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
-    "react-router-dom": "^5.2.0"
+    "react-router-dom": "^5.2.0",
+    "redux": "^4.0.5",
+    "redux-thunk": "^2.3.0"
   },
   "version": "0.1.0",
   "devDependencies": {
+    "redux-devtools-extension": "^2.13.8",
     "webpack-dev-server": "^3.11.2"
   }
 }
