--- a/package.json
+++ b/package.json
@@ -26,6 +26,9 @@
   },
   "version": "0.1.0",
   "devDependencies": {
+    "husky": "^6.0.0",
+    "lint-staged": "^10.5.4",
+    "prettier": "^2.2.1",
     "redux-devtools-extension": "^2.13.8",
     "webpack-dev-server": "^3.11.2"
   }
