--- a/config/database.yml
+++ b/config/database.yml
@@ -23,7 +23,7 @@ default: &default
 
 development:
   <<: *default
-  database: dpo_development
+  database: dpo_dev
 
   # The specified database role being used to connect to postgres.
   # To create additional roles in postgres see `$ createuser --help`.
@@ -81,6 +81,6 @@ test:
 #
 production:
   <<: *default
-  database: dpo_production
+  database: dpo_prod
   username: azureuser
   password: <%= ENV['DPO_DATABASE_PASSWORD'] %>
